--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
-  publish = "my-first-react-app/build"
+  base = "my-first-react-app"
   command = "CI=true npm run build"
+  publish = "build"
